--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
                     <div class="video-info">
                         <h3>How we made a profitable Bitcoin strategy using ChatGPT</h3>
                         <div class="channel">Quantified Strategies</div>
-                        <div class="date">26 minutes ago</div>
+                        <div class="date">50 minutes ago</div>
                     </div>
                 </a>
             </div>
@@ -134,7 +134,7 @@
                     <div class="video-info">
                         <h3>VIKKSTAR FIRST MAINSTAGE PERFORMANCE 🤯 #edm #vikkstar #sidemen #festival #dance #dancemusic</h3>
                         <div class="channel">Vikkstar123</div>
-                        <div class="date">38 minutes ago</div>
+                        <div class="date">1 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -145,7 +145,7 @@
                     <div class="video-info">
                         <h3>Once You Taste Silence, You Cannot Be Without It | Sadhguru</h3>
                         <div class="channel">Sadhguru</div>
-                        <div class="date">39 minutes ago</div>
+                        <div class="date">1 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -167,7 +167,7 @@
                     <div class="video-info">
                         <h3>A Simple Trend Following Strategy (Backed By Data)</h3>
                         <div class="channel">Rayner Teo</div>
-                        <div class="date">2 hours ago</div>
+                        <div class="date">3 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -178,7 +178,7 @@
                     <div class="video-info">
                         <h3>Trading Strategy: Unveiling $22,275 Profit Results! #shorts</h3>
                         <div class="channel">Algo Trading With Kevin Davey</div>
-                        <div class="date">2 hours ago</div>
+                        <div class="date">3 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -211,7 +211,7 @@
                     <div class="video-info">
                         <h3>Darwinex TV: Performance Coaching - Session 13</h3>
                         <div class="channel">Darwinex</div>
-                        <div class="date">8 hours ago</div>
+                        <div class="date">9 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -222,7 +222,7 @@
                     <div class="video-info">
                         <h3>THE SLICE IS DEAD! Every golfer will draw the ball after doing this drill</h3>
                         <div class="channel">SagutoGolf</div>
-                        <div class="date">17 hours ago</div>
+                        <div class="date">18 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -244,7 +244,7 @@
                     <div class="video-info">
                         <h3>WE GOT ARRESTED on the WORLD’s MOST EXPENSIVE ROAD TRIP</h3>
                         <div class="channel">Vikkstar123</div>
-                        <div class="date">19 hours ago</div>
+                        <div class="date">20 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -255,7 +255,7 @@
                     <div class="video-info">
                         <h3>My Panino multi seeds #streetfood #food #panino #pizzarecipe #foodie</h3>
                         <div class="channel">Massimo Nocerino</div>
-                        <div class="date">20 hours ago</div>
+                        <div class="date">21 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -266,7 +266,7 @@
                     <div class="video-info">
                         <h3>Simple Practices to Transform Your Daily Life | With Eckhart Tolle</h3>
                         <div class="channel">Eckhart Tolle</div>
-                        <div class="date">21 hours ago</div>
+                        <div class="date">22 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -277,7 +277,7 @@
                     <div class="video-info">
                         <h3>Eckhart Tolle on How Simple Practices Transform Daily Life</h3>
                         <div class="channel">Eckhart Tolle</div>
-                        <div class="date">21 hours ago</div>
+                        <div class="date">22 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -618,7 +618,7 @@
                     <div class="video-info">
                         <h3>When Plants Begin to Speak…| Sadhguru</h3>
                         <div class="channel">Sadhguru</div>
-                        <div class="date">2 days ago</div>
+                        <div class="date">3 days ago</div>
                     </div>
                 </a>
             </div>
@@ -772,7 +772,7 @@
                     <div class="video-info">
                         <h3>WHAT DID HE SAY?!</h3>
                         <div class="channel">MoreSidemen</div>
-                        <div class="date">3 days ago</div>
+                        <div class="date">4 days ago</div>
                     </div>
                 </a>
             </div>
@@ -783,7 +783,7 @@
                     <div class="video-info">
                         <h3>Weave Your Life with the Divine | Sadhguru</h3>
                         <div class="channel">Sadhguru</div>
-                        <div class="date">3 days ago</div>
+                        <div class="date">4 days ago</div>
                     </div>
                 </a>
             </div>
@@ -2631,7 +2631,7 @@
                     <div class="video-info">
                         <h3>Z-Score RSI: The Upgrade You Didn’t Know You Needed 📈</h3>
                         <div class="channel">Ali Casey | StatOasis</div>
-                        <div class="date">4 weeks ago</div>
+                        <div class="date">Oct 12, 2025</div>
                     </div>
                 </a>
             </div>
@@ -5741,7 +5741,7 @@
                         <div class="video-info">
                             <h3>How we made a profitable Bitcoin strategy using ChatGPT</h3>
                             <div class="channel">Quantified Strategies</div>
-                            <div class="date">26 minutes ago</div>
+                            <div class="date">50 minutes ago</div>
                         </div>
                     </a>
                 </div>
@@ -5752,7 +5752,7 @@
                         <div class="video-info">
                             <h3>A Simple Trend Following Strategy (Backed By Data)</h3>
                             <div class="channel">Rayner Teo</div>
-                            <div class="date">2 hours ago</div>
+                            <div class="date">3 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -5763,7 +5763,7 @@
                         <div class="video-info">
                             <h3>Trading Strategy: Unveiling $22,275 Profit Results! #shorts</h3>
                             <div class="channel">Algo Trading With Kevin Davey</div>
-                            <div class="date">2 hours ago</div>
+                            <div class="date">3 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -5774,7 +5774,7 @@
                         <div class="video-info">
                             <h3>Darwinex TV: Performance Coaching - Session 13</h3>
                             <div class="channel">Darwinex</div>
-                            <div class="date">8 hours ago</div>
+                            <div class="date">9 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -6654,7 +6654,7 @@
                         <div class="video-info">
                             <h3>Z-Score RSI: The Upgrade You Didn’t Know You Needed 📈</h3>
                             <div class="channel">Ali Casey | StatOasis</div>
-                            <div class="date">4 weeks ago</div>
+                            <div class="date">Oct 12, 2025</div>
                         </div>
                     </a>
                 </div>
@@ -7894,7 +7894,7 @@
                         <div class="video-info">
                             <h3>Once You Taste Silence, You Cannot Be Without It | Sadhguru</h3>
                             <div class="channel">Sadhguru</div>
-                            <div class="date">39 minutes ago</div>
+                            <div class="date">1 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -7938,7 +7938,7 @@
                         <div class="video-info">
                             <h3>Simple Practices to Transform Your Daily Life | With Eckhart Tolle</h3>
                             <div class="channel">Eckhart Tolle</div>
-                            <div class="date">21 hours ago</div>
+                            <div class="date">22 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -7949,7 +7949,7 @@
                         <div class="video-info">
                             <h3>Eckhart Tolle on How Simple Practices Transform Daily Life</h3>
                             <div class="channel">Eckhart Tolle</div>
-                            <div class="date">21 hours ago</div>
+                            <div class="date">22 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -8092,7 +8092,7 @@
                         <div class="video-info">
                             <h3>When Plants Begin to Speak…| Sadhguru</h3>
                             <div class="channel">Sadhguru</div>
-                            <div class="date">2 days ago</div>
+                            <div class="date">3 days ago</div>
                         </div>
                     </a>
                 </div>
@@ -8169,7 +8169,7 @@
                         <div class="video-info">
                             <h3>Weave Your Life with the Divine | Sadhguru</h3>
                             <div class="channel">Sadhguru</div>
-                            <div class="date">3 days ago</div>
+                            <div class="date">4 days ago</div>
                         </div>
                     </a>
                 </div>
@@ -9391,7 +9391,7 @@
                         <div class="video-info">
                             <h3>My Panino multi seeds #streetfood #food #panino #pizzarecipe #foodie</h3>
                             <div class="channel">Massimo Nocerino</div>
-                            <div class="date">20 hours ago</div>
+                            <div class="date">21 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -10057,7 +10057,7 @@
                         <div class="video-info">
                             <h3>THE SLICE IS DEAD! Every golfer will draw the ball after doing this drill</h3>
                             <div class="channel">SagutoGolf</div>
-                            <div class="date">17 hours ago</div>
+                            <div class="date">18 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -10228,7 +10228,7 @@
                         <div class="video-info">
                             <h3>VIKKSTAR FIRST MAINSTAGE PERFORMANCE 🤯 #edm #vikkstar #sidemen #festival #dance #dancemusic</h3>
                             <div class="channel">Vikkstar123</div>
-                            <div class="date">38 minutes ago</div>
+                            <div class="date">1 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -10250,7 +10250,7 @@
                         <div class="video-info">
                             <h3>WE GOT ARRESTED on the WORLD’s MOST EXPENSIVE ROAD TRIP</h3>
                             <div class="channel">Vikkstar123</div>
-                            <div class="date">19 hours ago</div>
+                            <div class="date">20 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -10415,7 +10415,7 @@
                         <div class="video-info">
                             <h3>WHAT DID HE SAY?!</h3>
                             <div class="channel">MoreSidemen</div>
-                            <div class="date">3 days ago</div>
+                            <div class="date">4 days ago</div>
                         </div>
                     </a>
                 </div>
