--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
                     <div class="video-info">
                         <h3>Darwinex TV: 11.11.2025</h3>
                         <div class="channel">Darwinex</div>
-                        <div class="date">14 minutes ago</div>
+                        <div class="date">35 minutes ago</div>
                     </div>
                 </a>
             </div>
@@ -134,7 +134,7 @@
                     <div class="video-info">
                         <h3>Darwinex TV: 11.11.2025 📱</h3>
                         <div class="channel">Darwinex</div>
-                        <div class="date">14 minutes ago</div>
+                        <div class="date">35 minutes ago</div>
                     </div>
                 </a>
             </div>
@@ -145,7 +145,7 @@
                     <div class="video-info">
                         <h3>Is time a friend or foe?</h3>
                         <div class="channel">Eckhart Tolle</div>
-                        <div class="date">54 minutes ago</div>
+                        <div class="date">1 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -211,7 +211,7 @@
                     <div class="video-info">
                         <h3>A Simple Trend Following Strategy (Backed By Data)</h3>
                         <div class="channel">Rayner Teo</div>
-                        <div class="date">5 hours ago</div>
+                        <div class="date">6 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -222,7 +222,7 @@
                     <div class="video-info">
                         <h3>Trading Strategy: Unveiling $22,275 Profit Results! #shorts</h3>
                         <div class="channel">Algo Trading With Kevin Davey</div>
-                        <div class="date">5 hours ago</div>
+                        <div class="date">6 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -255,7 +255,7 @@
                     <div class="video-info">
                         <h3>Darwinex TV: Performance Coaching - Session 13</h3>
                         <div class="channel">Darwinex</div>
-                        <div class="date">11 hours ago</div>
+                        <div class="date">12 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -266,7 +266,7 @@
                     <div class="video-info">
                         <h3>THE SLICE IS DEAD! Every golfer will draw the ball after doing this golf swing drill</h3>
                         <div class="channel">SagutoGolf</div>
-                        <div class="date">20 hours ago</div>
+                        <div class="date">21 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -288,7 +288,7 @@
                     <div class="video-info">
                         <h3>WE GOT ARRESTED on the WORLD’s MOST EXPENSIVE ROAD TRIP</h3>
                         <div class="channel">Vikkstar123</div>
-                        <div class="date">22 hours ago</div>
+                        <div class="date">23 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -299,7 +299,7 @@
                     <div class="video-info">
                         <h3>My Panino multi seeds #streetfood #food #panino #pizzarecipe #foodie</h3>
                         <div class="channel">Massimo Nocerino</div>
-                        <div class="date">23 hours ago</div>
+                        <div class="date">Yesterday</div>
                     </div>
                 </a>
             </div>
@@ -5741,7 +5741,7 @@
                         <div class="video-info">
                             <h3>Darwinex TV: 11.11.2025</h3>
                             <div class="channel">Darwinex</div>
-                            <div class="date">14 minutes ago</div>
+                            <div class="date">35 minutes ago</div>
                         </div>
                     </a>
                 </div>
@@ -5752,7 +5752,7 @@
                         <div class="video-info">
                             <h3>Darwinex TV: 11.11.2025 📱</h3>
                             <div class="channel">Darwinex</div>
-                            <div class="date">14 minutes ago</div>
+                            <div class="date">35 minutes ago</div>
                         </div>
                     </a>
                 </div>
@@ -5774,7 +5774,7 @@
                         <div class="video-info">
                             <h3>A Simple Trend Following Strategy (Backed By Data)</h3>
                             <div class="channel">Rayner Teo</div>
-                            <div class="date">5 hours ago</div>
+                            <div class="date">6 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -5785,7 +5785,7 @@
                         <div class="video-info">
                             <h3>Trading Strategy: Unveiling $22,275 Profit Results! #shorts</h3>
                             <div class="channel">Algo Trading With Kevin Davey</div>
-                            <div class="date">5 hours ago</div>
+                            <div class="date">6 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -5796,7 +5796,7 @@
                         <div class="video-info">
                             <h3>Darwinex TV: Performance Coaching - Session 13</h3>
                             <div class="channel">Darwinex</div>
-                            <div class="date">11 hours ago</div>
+                            <div class="date">12 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -7894,7 +7894,7 @@
                         <div class="video-info">
                             <h3>Is time a friend or foe?</h3>
                             <div class="channel">Eckhart Tolle</div>
-                            <div class="date">54 minutes ago</div>
+                            <div class="date">1 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -9391,7 +9391,7 @@
                         <div class="video-info">
                             <h3>My Panino multi seeds #streetfood #food #panino #pizzarecipe #foodie</h3>
                             <div class="channel">Massimo Nocerino</div>
-                            <div class="date">23 hours ago</div>
+                            <div class="date">Yesterday</div>
                         </div>
                     </a>
                 </div>
@@ -10057,7 +10057,7 @@
                         <div class="video-info">
                             <h3>THE SLICE IS DEAD! Every golfer will draw the ball after doing this golf swing drill</h3>
                             <div class="channel">SagutoGolf</div>
-                            <div class="date">20 hours ago</div>
+                            <div class="date">21 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -10261,7 +10261,7 @@
                         <div class="video-info">
                             <h3>WE GOT ARRESTED on the WORLD’s MOST EXPENSIVE ROAD TRIP</h3>
                             <div class="channel">Vikkstar123</div>
-                            <div class="date">22 hours ago</div>
+                            <div class="date">23 hours ago</div>
                         </div>
                     </a>
                 </div>
