--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
                     <div class="video-info">
                         <h3>Darwinex TV: 11.11.2025</h3>
                         <div class="channel">Darwinex</div>
-                        <div class="date">35 minutes ago</div>
+                        <div class="date">46 minutes ago</div>
                     </div>
                 </a>
             </div>
@@ -134,7 +134,7 @@
                     <div class="video-info">
                         <h3>Darwinex TV: 11.11.2025 📱</h3>
                         <div class="channel">Darwinex</div>
-                        <div class="date">35 minutes ago</div>
+                        <div class="date">46 minutes ago</div>
                     </div>
                 </a>
             </div>
@@ -178,7 +178,7 @@
                     <div class="video-info">
                         <h3>VIKKSTAR FIRST MAINSTAGE PERFORMANCE 🤯 #edm #vikkstar #sidemen #festival #dance #dancemusic</h3>
                         <div class="channel">Vikkstar123</div>
-                        <div class="date">3 hours ago</div>
+                        <div class="date">4 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -189,7 +189,7 @@
                     <div class="video-info">
                         <h3>Once You Taste Silence, You Cannot Be Without It | Sadhguru</h3>
                         <div class="channel">Sadhguru</div>
-                        <div class="date">3 hours ago</div>
+                        <div class="date">4 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -200,7 +200,7 @@
                     <div class="video-info">
                         <h3>Lesser-known Temples of Kashi – Juhi Chawla & Sadhguru | 4K UHD</h3>
                         <div class="channel">Sadhguru</div>
-                        <div class="date">5 hours ago</div>
+                        <div class="date">6 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -1124,7 +1124,7 @@
                     <div class="video-info">
                         <h3>Noone Believed Him?!</h3>
                         <div class="channel">MoreSidemen</div>
-                        <div class="date">6 days ago</div>
+                        <div class="date">1 week ago</div>
                     </div>
                 </a>
             </div>
@@ -5741,7 +5741,7 @@
                         <div class="video-info">
                             <h3>Darwinex TV: 11.11.2025</h3>
                             <div class="channel">Darwinex</div>
-                            <div class="date">35 minutes ago</div>
+                            <div class="date">46 minutes ago</div>
                         </div>
                     </a>
                 </div>
@@ -5752,7 +5752,7 @@
                         <div class="video-info">
                             <h3>Darwinex TV: 11.11.2025 📱</h3>
                             <div class="channel">Darwinex</div>
-                            <div class="date">35 minutes ago</div>
+                            <div class="date">46 minutes ago</div>
                         </div>
                     </a>
                 </div>
@@ -7905,7 +7905,7 @@
                         <div class="video-info">
                             <h3>Once You Taste Silence, You Cannot Be Without It | Sadhguru</h3>
                             <div class="channel">Sadhguru</div>
-                            <div class="date">3 hours ago</div>
+                            <div class="date">4 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -7916,7 +7916,7 @@
                         <div class="video-info">
                             <h3>Lesser-known Temples of Kashi – Juhi Chawla & Sadhguru | 4K UHD</h3>
                             <div class="channel">Sadhguru</div>
-                            <div class="date">5 hours ago</div>
+                            <div class="date">6 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -10239,7 +10239,7 @@
                         <div class="video-info">
                             <h3>VIKKSTAR FIRST MAINSTAGE PERFORMANCE 🤯 #edm #vikkstar #sidemen #festival #dance #dancemusic</h3>
                             <div class="channel">Vikkstar123</div>
-                            <div class="date">3 hours ago</div>
+                            <div class="date">4 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -10503,7 +10503,7 @@
                         <div class="video-info">
                             <h3>Noone Believed Him?!</h3>
                             <div class="channel">MoreSidemen</div>
-                            <div class="date">6 days ago</div>
+                            <div class="date">1 week ago</div>
                         </div>
                     </a>
                 </div>
