--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
                     <div class="video-info">
                         <h3>Darwinex TV: 11.11.2025</h3>
                         <div class="channel">Darwinex</div>
-                        <div class="date">1 hours ago</div>
+                        <div class="date">2 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -134,7 +134,7 @@
                     <div class="video-info">
                         <h3>Darwinex TV: 11.11.2025 📱</h3>
                         <div class="channel">Darwinex</div>
-                        <div class="date">1 hours ago</div>
+                        <div class="date">2 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -156,7 +156,7 @@
                     <div class="video-info">
                         <h3>Trust Arthur to Have a Quote for Every Possible Scenario😅</h3>
                         <div class="channel">Arthur Frederick</div>
-                        <div class="date">3 hours ago</div>
+                        <div class="date">4 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -233,7 +233,7 @@
                     <div class="video-info">
                         <h3>Michael Singer - Exploring Transmutation of Energy</h3>
                         <div class="channel">Seats of Contemplation</div>
-                        <div class="date">10 hours ago</div>
+                        <div class="date">11 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -277,7 +277,7 @@
                     <div class="video-info">
                         <h3>Arthur Hill - Back Here Again (Live From LA)</h3>
                         <div class="channel">Arthur Hill</div>
-                        <div class="date">23 hours ago</div>
+                        <div class="date">Yesterday</div>
                     </div>
                 </a>
             </div>
@@ -871,7 +871,7 @@
                     <div class="video-info">
                         <h3>Algo Trading - What Verified Champion Trader Kevin Davey is Trading in November 2025</h3>
                         <div class="channel">Algo Trading With Kevin Davey</div>
-                        <div class="date">4 days ago</div>
+                        <div class="date">5 days ago</div>
                     </div>
                 </a>
             </div>
@@ -1828,7 +1828,7 @@
                     <div class="video-info">
                         <h3>SIDEMEN FIND THE LINK</h3>
                         <div class="channel">MoreSidemen</div>
-                        <div class="date">1 week ago</div>
+                        <div class="date">2 weeks ago</div>
                     </div>
                 </a>
             </div>
@@ -5741,7 +5741,7 @@
                         <div class="video-info">
                             <h3>Darwinex TV: 11.11.2025</h3>
                             <div class="channel">Darwinex</div>
-                            <div class="date">1 hours ago</div>
+                            <div class="date">2 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -5752,7 +5752,7 @@
                         <div class="video-info">
                             <h3>Darwinex TV: 11.11.2025 📱</h3>
                             <div class="channel">Darwinex</div>
-                            <div class="date">1 hours ago</div>
+                            <div class="date">2 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -5906,7 +5906,7 @@
                         <div class="video-info">
                             <h3>Algo Trading - What Verified Champion Trader Kevin Davey is Trading in November 2025</h3>
                             <div class="channel">Algo Trading With Kevin Davey</div>
-                            <div class="date">4 days ago</div>
+                            <div class="date">5 days ago</div>
                         </div>
                     </a>
                 </div>
@@ -7927,7 +7927,7 @@
                         <div class="video-info">
                             <h3>Michael Singer - Exploring Transmutation of Energy</h3>
                             <div class="channel">Seats of Contemplation</div>
-                            <div class="date">10 hours ago</div>
+                            <div class="date">11 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -10228,7 +10228,7 @@
                         <div class="video-info">
                             <h3>Trust Arthur to Have a Quote for Every Possible Scenario😅</h3>
                             <div class="channel">Arthur Frederick</div>
-                            <div class="date">3 hours ago</div>
+                            <div class="date">4 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -10250,7 +10250,7 @@
                         <div class="video-info">
                             <h3>Arthur Hill - Back Here Again (Live From LA)</h3>
                             <div class="channel">Arthur Hill</div>
-                            <div class="date">23 hours ago</div>
+                            <div class="date">Yesterday</div>
                         </div>
                     </a>
                 </div>
@@ -10734,7 +10734,7 @@
                         <div class="video-info">
                             <h3>SIDEMEN FIND THE LINK</h3>
                             <div class="channel">MoreSidemen</div>
-                            <div class="date">1 week ago</div>
+                            <div class="date">2 weeks ago</div>
                         </div>
                     </a>
                 </div>
