--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
                     <div class="video-info">
                         <h3>Nightmare Roommates 3</h3>
                         <div class="channel">Arthur Frederick</div>
-                        <div class="date">16 minutes ago</div>
+                        <div class="date">33 minutes ago</div>
                     </div>
                 </a>
             </div>
@@ -178,7 +178,7 @@
                     <div class="video-info">
                         <h3>How we made a profitable Bitcoin strategy using ChatGPT</h3>
                         <div class="channel">Quantified Strategies</div>
-                        <div class="date">6 hours ago</div>
+                        <div class="date">7 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -211,7 +211,7 @@
                     <div class="video-info">
                         <h3>Lesser-known Temples of Kashi – Juhi Chawla & Sadhguru | 4K UHD</h3>
                         <div class="channel">Sadhguru</div>
-                        <div class="date">8 hours ago</div>
+                        <div class="date">9 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -2631,7 +2631,7 @@
                     <div class="video-info">
                         <h3>Ignore the gap....Yes I did eat one before I filmed this, I couldn't resist 🙈🤣</h3>
                         <div class="channel">Tom Voyage</div>
-                        <div class="date">4 weeks ago</div>
+                        <div class="date">Oct 12, 2025</div>
                     </div>
                 </a>
             </div>
@@ -5763,7 +5763,7 @@
                         <div class="video-info">
                             <h3>How we made a profitable Bitcoin strategy using ChatGPT</h3>
                             <div class="channel">Quantified Strategies</div>
-                            <div class="date">6 hours ago</div>
+                            <div class="date">7 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -7916,7 +7916,7 @@
                         <div class="video-info">
                             <h3>Lesser-known Temples of Kashi – Juhi Chawla & Sadhguru | 4K UHD</h3>
                             <div class="channel">Sadhguru</div>
-                            <div class="date">8 hours ago</div>
+                            <div class="date">9 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -9677,7 +9677,7 @@
                         <div class="video-info">
                             <h3>Ignore the gap....Yes I did eat one before I filmed this, I couldn't resist 🙈🤣</h3>
                             <div class="channel">Tom Voyage</div>
-                            <div class="date">4 weeks ago</div>
+                            <div class="date">Oct 12, 2025</div>
                         </div>
                     </a>
                 </div>
@@ -10228,7 +10228,7 @@
                         <div class="video-info">
                             <h3>Nightmare Roommates 3</h3>
                             <div class="channel">Arthur Frederick</div>
-                            <div class="date">16 minutes ago</div>
+                            <div class="date">33 minutes ago</div>
                         </div>
                     </a>
                 </div>
